# magneto-serge

./: .dockerignore  .env.example  .gitignore  ANNOUNCEMENT.md  BENCHMARKS.md  BINDINGS.md  BUFFERING-IMPLEMENTATION.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  CLI-AND-PUBLISHING-REPORT.md  CODE_OF_CONDUCT.md  COMMANDS.md  COMPRESSION.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cargo.toml.backup.1761353166  DOCKER_COMMANDS.md  Dockerfile  Dockerfile.alpine  Dockerfile.transparent  FILTERS.md  INSTALLATION_COMPLETE.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  Makefile  NEXT-STEPS.md  OPTIMIZATIONS.md  PHASE-2-COMPLETE.md  PHASE-2-RECAP.md  PHASE-2.4-TESTING.md  PHASE-3-INDEX.md  PHASE-3-PLAN.md  PHASE-3-READY.md  PHASE-3.0-CRUD.md  PHASE-3.0-PROGRESS.md  PHASE-3.1-SEARCH.md  PHASE-3.2-REALTIME.md  (+43 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cd.yml  ci.yml  e2e.yml  release.yml
Formula/: README.md  magneto-serge.rb
benches/: http_proxy.rs  serialization_optim.rs  websocket_proxy.rs
bindings/: README.md  generate.sh
bindings/java/: Example.java  GRADLE_MAVEN.md  JUNIT_EXTENSION.md  MagnetoProxy.java  MatgtoProxy.java  MatgtoTest.java  PUBLISHING.md  README.md  build.gradle  build.gradle.kts  gradle.properties  pom.xml  settings.gradle.kts
bindings/javascript/: .npmrc  .npmrc.github  Cargo.toml  JEST_PLUGIN.md  PUBLISHING.md  README.md  index.d.ts  index.d.ts.old  index.js  index.js.old  jest-magneto.js  package.json  package.json.old
bindings/javascript/examples/: basic.js  jest-example.test.js
bindings/javascript/src/: lib.rs
bindings/jest/: example.test.js  magneto-matchers.d.ts  magneto-matchers.js  package.json  test_unit.test.js
bindings/junit/: ExampleTest.java  MagnetoAssertions.java  UnitTest.java  pom.xml
bindings/kotlin/: Example.kt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/php/: MagnetoProxy.php  MatgtoProxy.php  PACKAGIST.md  README.md  composer.json  example_basic.php  example_phpunit.php  example_replay.php
bindings/php/magneto-serge-phpunit/: .gitignore  README.md  composer.json  phpunit.xml.dist
bindings/phpunit/: ExampleTest.php  MagnetoAssertions.php  UnitTest.php  composer.json
bindings/pytest/: magneto_pytest.py  setup.py  test_example.py  test_unit.py
bindings/python/: PYTEST_PLUGIN.md  README.md  example_basic.py  example_magneto.py  example_replay.py  libuniffi_matgto_serge.dylib  magneto_serge.py  matgto_serge.py  pytest_magneto.py  test_bindings.py  test_magneto_bindings.py  test_pytest_integration.py
bindings/python/pytest-magneto-serge/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
bindings/python/pytest-magneto-serge/examples/: test_advanced.py  test_basic.py
bindings/python/pytest-magneto-serge/pytest_magneto_serge/: __init__.py  decorators.py  fixtures.py  plugin.py
bindings/python/pytest-magneto-serge/tests/: conftest.py  test_plugin.py
bindings/swift/: Example.swift  MagnetoXCTestCase.swift  README.md  XCTEST_INTEGRATION.md  libuniffi_magneto_serge.dylib  magneto_serge.swift  magneto_sergeFFI.h  magneto_sergeFFI.modulemap  matgto_serge.swift  matgto_sergeFFI.h  matgto_sergeFFI.modulemap
docker/: default.conf  entrypoint.sh  nginx.conf  supervisord.conf
docker/frontend/: README.md  index.html
docs/: API.md  ARCHITECTURE.md  COMPARISON-VCR.md  CURRENT-STATUS.md  DOCKER.md  DOCKER_ALPINE.md  ERROR_RECORDING.md  EXAMPLES.md  GAP-ANALYSIS.md  GIT_HOOKS.md  LATENCY_SIMULATION.md  MIGRATION-FROM-VCR.md  NEXT-STEPS.md  PHASE-3-PROGRESS.md  PHASE-3.2-COMPATIBILITY-REPORT.md  RELEASE-GUIDE.md  ROADMAP-v0.3-v0.4.md  ROADMAP.md  SECRETS_SETUP.md  SECRETS_STATUS.md  SESSION-2025-10-27-PHASE3.4-COMPLETION.md  SESSION-FINALE-PHASE3.md  SESSION-RECAP-2025-10-25.md  TECH-STACK.md
docs/archive/: SESSION_AUTH.md
examples/: README.md  advanced_matching.rs  api_client.js  api_client.py  api_client.sh  api_server.rs  hooks_advanced.rs  hooks_basic.rs  http_record_replay.rs  hydra_api_server.rs  simple_record.rs  test_helpers_example.rs
examples/angular-client/: README.md  angular.json  package.json  tsconfig.app.json
examples/angular-simple-client/: README.md  angular.json  package.json  tsconfig.json
examples/cassettes-with-templates/: README.md  api-auth-with-env.json  dynamic-timestamps.json  webhook-with-request-data.json
examples/docker-vcr/: README.md
examples/docker/basic/: README.md  (+1 more)
examples/nodejs-backend/: .gitignore  ARCHITECTURE.md  README.md  package.json
frontend/: .gitignore  DEVELOPMENT.md  README.md  angular.json  cypress.config.ts  dev-server.sh  karma.conf.js  package.json  proxy.conf.json
frontend/cypress/: README.md
frontend/src/: alcaeus.d.ts  index.html  main.ts  polyfills.ts  styles.scss
magneto-serge-test/: Cargo.toml  README.md
magneto-serge-test/src/: lib.rs
scripts/: check-deps.sh  dev-stack.sh  generate-python-bindings.sh  install-git-hooks.sh  install.sh  setup-secrets.sh  start-dev.sh  stop-dev.sh
src/: cassette-mod.rs.patch  cassette.rs  cookies.rs  error.rs  filters.rs  hooks.rs  lib.rs  lib.rs.backup.fix  magneto_serge.udl  matching.rs  matgto_serge.udl  player.rs  player.rs.backup.final  player.rs.patch  proxy.rs  recorder.rs  templates.rs  test_helpers.rs
src/api/: cassettes.rs  handlers.rs  hydra_handlers.rs  mod.rs  openapi.rs  server.rs  validation.rs
src/cassette/: mod.rs  mod.rs.backup.final  storage.rs
src/filters/: body_size.rs  content_type.rs  extension.rs  mod.rs  status_code.rs  url_pattern.rs
src/hydra/: collection.rs  context.rs  documentation.rs  error.rs  mod.rs  operation.rs  response.rs  vocabulary.rs
src/proxy/: client.rs  http_handler.rs  server.rs
src/tls/: certificate.rs  mod.rs
src/websocket/: interceptor.rs  mod.rs  player.rs  recorder.rs
tests/: e2e_http_proxy.rs  e2e_websocket.rs  integration_test.rs  test_advanced_matching.rs  test_api.rs  test_error_recording.rs  test_filters_integration.rs  test_latency_simulation.rs  test_proxy_real_start.rs  test_strict_mode.rs  test_templates.rs
(+102 files in other folders)
